# DiscordChessBot

./: .readthedocs.yaml  README.md  main.py  main.sh  pyproject.toml  requirements.txt  setup.py  utils.py
plugins/chess/: chess.py  data.py  elo.py
plugins/core/: help.py  on_command_error.py  setup.py
plugins/core/errors/: on_command_error.py  on_slash_command_error.py
plugins/core/startup/: on_ready.py
plugins/general/: commands.py
